--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-Flask==2.0.2
-Flask-Cors==3.1.1
+click==8.1.3
+Flask==2.2.3
+Flask-Cors==3.0.10
 gunicorn==20.1.0
+importlib-metadata==6.1.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+six==1.16.0
+Werkzeug==2.2.3
+zipp==3.15.0
+
