--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+async-timeout==4.0.2
 click==8.1.3
 Flask==2.2.3
 Flask-Cors==3.0.10
@@ -6,6 +7,7 @@ importlib-metadata==6.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+redis==4.5.4
 six==1.16.0
 Werkzeug==2.2.3
 zipp==3.15.0
